ie7 layout bug fixes
git-svn-id: http://svn.localprojects.net/gam2@933 befef031-aaeb-48d0-b70f-681328309d3d

--- a/trunk/static/css/tc.gam.main.css
+++ b/trunk/static/css/tc.gam.main.css
@@ -1043,6 +1043,7 @@ PAGE-SPECIFIC STYLES
 .continent.project .midlands .box .sub-ft,
 .continent.project .midlands .box > .ft { padding:5px 10px 0; }
 
+.continent.project .box.resources { }
 .box.resources p.hint {width: 250px; margin-top: 2px;}
 
 
